// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderResultsView should correctly render the view, when both the departure and return weather forecasts are undefined 1`] = `
"
<main class=\\"card\\">
  
<figure class=\\"card__image\\">
  <img
    class=\\"card__image-thumbnail\\"
    src=\\"mock-thumbnail-url\\"
    alt=\\"view of the destination\\"
  />
  <figcaption class=\\"card__image-caption\\">
    <span class=\\"card__image-caption-flag\\">mock-flag</span>
    <span class=\\"card__image-caption-city\\">mock-city</span>
  </figcaption>
</figure>

  <article class=\\"card__info\\">
        <div class=\\"card__info-continent--label\\">Continent:</div>
        <div class=\\"card__info-continent--value\\">mock-continent</div>
      
        <div class=\\"card__info-subregion--label\\">Subregion:</div>
        <div class=\\"card__info-continent--value\\">mock-subregion</div>
      
        <div class=\\"card__info-country--label\\">Country:</div>
        <div class=\\"card__info-continent--value\\">mock-country</div>
      
        <div class=\\"card__info-county--label\\">County:</div>
        <div class=\\"card__info-continent--value\\">mock-county</div>
      
        <div class=\\"card__info-capital--label\\">Capital:</div>
        <div class=\\"card__info-continent--value\\">mock-capital</div>
      
        <div class=\\"card__info-currency--label\\">Currency:</div>
        <div class=\\"card__info-continent--value\\">mock-currency1 (cur1), mock-currency2 (cur2)</div>
      
        <div class=\\"card__info-language--label\\">Language:</div>
        <div class=\\"card__info-continent--value\\">mock-language1, mock-language2</div>
      
        <div class=\\"card__info-timezone-name--label\\">Timezone:</div>
        <div class=\\"card__info-continent--value\\">mock-timezone</div>
      
        <div class=\\"card__info-timezone-offset--label\\">Offset:</div>
        <div class=\\"card__info-continent--value\\">mock-offset</div>
      </article>
  
  <article class=\\"infobox current\\">
    <div class=\\"infobox__title\\">Current Weather</div>
    <div class=\\"infobox__date\\">7 Dec 2021 - 10:12 am</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    <div class=\\"weather__temperature\\">
      <span>mock-temperature<sup>&#8451;</sup></sup></span>
    </div>

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox departure\\">
    <div class=\\"infobox__title\\">Departure</div>
    <div class=\\"infobox__date\\">11 Dec 2021</div>
    
  </article>
  
  <article class=\\"infobox return\\">
    <div class=\\"infobox__title\\">Return</div>
    <div class=\\"infobox__date\\">12 Dec 2021</div>
    
  </article>
  
  <button class=\\"card__button\\" type=\\"button\\">
    <i class=\\"icon-heart-empty\\"></i>
    <i class=\\"icon-heart\\"></i>
    <span>Save Trip</span>
  </button>
  
</main>"
`;

exports[`renderResultsView should correctly render the view, when the county is mock-county 1`] = `
"
<main class=\\"card\\">
  
<figure class=\\"card__image\\">
  <img
    class=\\"card__image-thumbnail\\"
    src=\\"mock-thumbnail-url\\"
    alt=\\"view of the destination\\"
  />
  <figcaption class=\\"card__image-caption\\">
    <span class=\\"card__image-caption-flag\\">mock-flag</span>
    <span class=\\"card__image-caption-city\\">mock-city</span>
  </figcaption>
</figure>

  <article class=\\"card__info\\">
        <div class=\\"card__info-continent--label\\">Continent:</div>
        <div class=\\"card__info-continent--value\\">mock-continent</div>
      
        <div class=\\"card__info-subregion--label\\">Subregion:</div>
        <div class=\\"card__info-continent--value\\">mock-subregion</div>
      
        <div class=\\"card__info-country--label\\">Country:</div>
        <div class=\\"card__info-continent--value\\">mock-country</div>
      
        <div class=\\"card__info-county--label\\">County:</div>
        <div class=\\"card__info-continent--value\\">mock-county</div>
      
        <div class=\\"card__info-capital--label\\">Capital:</div>
        <div class=\\"card__info-continent--value\\">mock-capital</div>
      
        <div class=\\"card__info-currency--label\\">Currency:</div>
        <div class=\\"card__info-continent--value\\">mock-currency1 (cur1), mock-currency2 (cur2)</div>
      
        <div class=\\"card__info-language--label\\">Language:</div>
        <div class=\\"card__info-continent--value\\">mock-language1, mock-language2</div>
      
        <div class=\\"card__info-timezone-name--label\\">Timezone:</div>
        <div class=\\"card__info-continent--value\\">mock-timezone</div>
      
        <div class=\\"card__info-timezone-offset--label\\">Offset:</div>
        <div class=\\"card__info-continent--value\\">mock-offset</div>
      </article>
  
  <article class=\\"infobox current\\">
    <div class=\\"infobox__title\\">Current Weather</div>
    <div class=\\"infobox__date\\">7 Dec 2021 - 10:12 am</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    <div class=\\"weather__temperature\\">
      <span>mock-temperature<sup>&#8451;</sup></sup></span>
    </div>

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox departure\\">
    <div class=\\"infobox__title\\">Departure</div>
    <div class=\\"infobox__date\\">11 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox return\\">
    <div class=\\"infobox__title\\">Return</div>
    <div class=\\"infobox__date\\">12 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <button class=\\"card__button\\" type=\\"button\\">
    <i class=\\"icon-heart-empty\\"></i>
    <i class=\\"icon-heart\\"></i>
    <span>Save Trip</span>
  </button>
  
</main>"
`;

exports[`renderResultsView should correctly render the view, when the county is undefined 1`] = `
"
<main class=\\"card\\">
  
<figure class=\\"card__image\\">
  <img
    class=\\"card__image-thumbnail\\"
    src=\\"mock-thumbnail-url\\"
    alt=\\"view of the destination\\"
  />
  <figcaption class=\\"card__image-caption\\">
    <span class=\\"card__image-caption-flag\\">mock-flag</span>
    <span class=\\"card__image-caption-city\\">mock-city</span>
  </figcaption>
</figure>

  <article class=\\"card__info\\">
        <div class=\\"card__info-continent--label\\">Continent:</div>
        <div class=\\"card__info-continent--value\\">mock-continent</div>
      
        <div class=\\"card__info-subregion--label\\">Subregion:</div>
        <div class=\\"card__info-continent--value\\">mock-subregion</div>
      
        <div class=\\"card__info-country--label\\">Country:</div>
        <div class=\\"card__info-continent--value\\">mock-country</div>
      
        <div class=\\"card__info-county--label\\">County:</div>
        <div class=\\"card__info-continent--value\\">mock-county</div>
      
        <div class=\\"card__info-capital--label\\">Capital:</div>
        <div class=\\"card__info-continent--value\\">mock-capital</div>
      
        <div class=\\"card__info-currency--label\\">Currency:</div>
        <div class=\\"card__info-continent--value\\">mock-currency1 (cur1), mock-currency2 (cur2)</div>
      
        <div class=\\"card__info-language--label\\">Language:</div>
        <div class=\\"card__info-continent--value\\">mock-language1, mock-language2</div>
      
        <div class=\\"card__info-timezone-name--label\\">Timezone:</div>
        <div class=\\"card__info-continent--value\\">mock-timezone</div>
      
        <div class=\\"card__info-timezone-offset--label\\">Offset:</div>
        <div class=\\"card__info-continent--value\\">mock-offset</div>
      </article>
  
  <article class=\\"infobox current\\">
    <div class=\\"infobox__title\\">Current Weather</div>
    <div class=\\"infobox__date\\">7 Dec 2021 - 10:12 am</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    <div class=\\"weather__temperature\\">
      <span>mock-temperature<sup>&#8451;</sup></sup></span>
    </div>

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox departure\\">
    <div class=\\"infobox__title\\">Departure</div>
    <div class=\\"infobox__date\\">11 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox return\\">
    <div class=\\"infobox__title\\">Return</div>
    <div class=\\"infobox__date\\">12 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <button class=\\"card__button\\" type=\\"button\\">
    <i class=\\"icon-heart-empty\\"></i>
    <i class=\\"icon-heart\\"></i>
    <span>Save Trip</span>
  </button>
  
</main>"
`;

exports[`renderResultsView should correctly render the view, when the return weather forecast is undefined 1`] = `
"
<main class=\\"card\\">
  
<figure class=\\"card__image\\">
  <img
    class=\\"card__image-thumbnail\\"
    src=\\"mock-thumbnail-url\\"
    alt=\\"view of the destination\\"
  />
  <figcaption class=\\"card__image-caption\\">
    <span class=\\"card__image-caption-flag\\">mock-flag</span>
    <span class=\\"card__image-caption-city\\">mock-city</span>
  </figcaption>
</figure>

  <article class=\\"card__info\\">
        <div class=\\"card__info-continent--label\\">Continent:</div>
        <div class=\\"card__info-continent--value\\">mock-continent</div>
      
        <div class=\\"card__info-subregion--label\\">Subregion:</div>
        <div class=\\"card__info-continent--value\\">mock-subregion</div>
      
        <div class=\\"card__info-country--label\\">Country:</div>
        <div class=\\"card__info-continent--value\\">mock-country</div>
      
        <div class=\\"card__info-county--label\\">County:</div>
        <div class=\\"card__info-continent--value\\">mock-county</div>
      
        <div class=\\"card__info-capital--label\\">Capital:</div>
        <div class=\\"card__info-continent--value\\">mock-capital</div>
      
        <div class=\\"card__info-currency--label\\">Currency:</div>
        <div class=\\"card__info-continent--value\\">mock-currency1 (cur1), mock-currency2 (cur2)</div>
      
        <div class=\\"card__info-language--label\\">Language:</div>
        <div class=\\"card__info-continent--value\\">mock-language1, mock-language2</div>
      
        <div class=\\"card__info-timezone-name--label\\">Timezone:</div>
        <div class=\\"card__info-continent--value\\">mock-timezone</div>
      
        <div class=\\"card__info-timezone-offset--label\\">Offset:</div>
        <div class=\\"card__info-continent--value\\">mock-offset</div>
      </article>
  
  <article class=\\"infobox current\\">
    <div class=\\"infobox__title\\">Current Weather</div>
    <div class=\\"infobox__date\\">7 Dec 2021 - 10:12 am</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    <div class=\\"weather__temperature\\">
      <span>mock-temperature<sup>&#8451;</sup></sup></span>
    </div>

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox departure\\">
    <div class=\\"infobox__title\\">Departure</div>
    <div class=\\"infobox__date\\">11 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox return\\">
    <div class=\\"infobox__title\\">Return</div>
    <div class=\\"infobox__date\\">12 Dec 2021</div>
    
  </article>
  
  <button class=\\"card__button\\" type=\\"button\\">
    <i class=\\"icon-heart-empty\\"></i>
    <i class=\\"icon-heart\\"></i>
    <span>Save Trip</span>
  </button>
  
</main>"
`;

exports[`renderResultsView should correctly render the view, when the thumbnail is mock-thumbnail 1`] = `
"
<main class=\\"card\\">
  
<figure class=\\"card__image\\">
  <img
    class=\\"card__image-thumbnail\\"
    src=\\"mock-thumbnail\\"
    alt=\\"view of the destination\\"
  />
  <figcaption class=\\"card__image-caption\\">
    <span class=\\"card__image-caption-flag\\">mock-flag</span>
    <span class=\\"card__image-caption-city\\">mock-city</span>
  </figcaption>
</figure>

  <article class=\\"card__info\\">
        <div class=\\"card__info-continent--label\\">Continent:</div>
        <div class=\\"card__info-continent--value\\">mock-continent</div>
      
        <div class=\\"card__info-subregion--label\\">Subregion:</div>
        <div class=\\"card__info-continent--value\\">mock-subregion</div>
      
        <div class=\\"card__info-country--label\\">Country:</div>
        <div class=\\"card__info-continent--value\\">mock-country</div>
      
        <div class=\\"card__info-county--label\\">County:</div>
        <div class=\\"card__info-continent--value\\">mock-county</div>
      
        <div class=\\"card__info-capital--label\\">Capital:</div>
        <div class=\\"card__info-continent--value\\">mock-capital</div>
      
        <div class=\\"card__info-currency--label\\">Currency:</div>
        <div class=\\"card__info-continent--value\\">mock-currency1 (cur1), mock-currency2 (cur2)</div>
      
        <div class=\\"card__info-language--label\\">Language:</div>
        <div class=\\"card__info-continent--value\\">mock-language1, mock-language2</div>
      
        <div class=\\"card__info-timezone-name--label\\">Timezone:</div>
        <div class=\\"card__info-continent--value\\">mock-timezone</div>
      
        <div class=\\"card__info-timezone-offset--label\\">Offset:</div>
        <div class=\\"card__info-continent--value\\">mock-offset</div>
      </article>
  
  <article class=\\"infobox current\\">
    <div class=\\"infobox__title\\">Current Weather</div>
    <div class=\\"infobox__date\\">7 Dec 2021 - 10:12 am</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    <div class=\\"weather__temperature\\">
      <span>mock-temperature<sup>&#8451;</sup></sup></span>
    </div>

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox departure\\">
    <div class=\\"infobox__title\\">Departure</div>
    <div class=\\"infobox__date\\">11 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox return\\">
    <div class=\\"infobox__title\\">Return</div>
    <div class=\\"infobox__date\\">12 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <button class=\\"card__button\\" type=\\"button\\">
    <i class=\\"icon-heart-empty\\"></i>
    <i class=\\"icon-heart\\"></i>
    <span>Save Trip</span>
  </button>
  
</main>"
`;

exports[`renderResultsView should correctly render the view, when the thumbnail is undefined 1`] = `
"
<main class=\\"card\\">
  
<figure class=\\"card__image\\">
  <img
    class=\\"card__image-thumbnail\\"
    src=\\"\\"
    alt=\\"view of the destination\\"
  />
  <figcaption class=\\"card__image-caption\\">
    <span class=\\"card__image-caption-flag\\">mock-flag</span>
    <span class=\\"card__image-caption-city\\">mock-city</span>
  </figcaption>
</figure>

  <article class=\\"card__info\\">
        <div class=\\"card__info-continent--label\\">Continent:</div>
        <div class=\\"card__info-continent--value\\">mock-continent</div>
      
        <div class=\\"card__info-subregion--label\\">Subregion:</div>
        <div class=\\"card__info-continent--value\\">mock-subregion</div>
      
        <div class=\\"card__info-country--label\\">Country:</div>
        <div class=\\"card__info-continent--value\\">mock-country</div>
      
        <div class=\\"card__info-county--label\\">County:</div>
        <div class=\\"card__info-continent--value\\">mock-county</div>
      
        <div class=\\"card__info-capital--label\\">Capital:</div>
        <div class=\\"card__info-continent--value\\">mock-capital</div>
      
        <div class=\\"card__info-currency--label\\">Currency:</div>
        <div class=\\"card__info-continent--value\\">mock-currency1 (cur1), mock-currency2 (cur2)</div>
      
        <div class=\\"card__info-language--label\\">Language:</div>
        <div class=\\"card__info-continent--value\\">mock-language1, mock-language2</div>
      
        <div class=\\"card__info-timezone-name--label\\">Timezone:</div>
        <div class=\\"card__info-continent--value\\">mock-timezone</div>
      
        <div class=\\"card__info-timezone-offset--label\\">Offset:</div>
        <div class=\\"card__info-continent--value\\">mock-offset</div>
      </article>
  
  <article class=\\"infobox current\\">
    <div class=\\"infobox__title\\">Current Weather</div>
    <div class=\\"infobox__date\\">7 Dec 2021 - 10:12 am</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    <div class=\\"weather__temperature\\">
      <span>mock-temperature<sup>&#8451;</sup></sup></span>
    </div>

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox departure\\">
    <div class=\\"infobox__title\\">Departure</div>
    <div class=\\"infobox__date\\">11 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <article class=\\"infobox return\\">
    <div class=\\"infobox__title\\">Return</div>
    <div class=\\"infobox__date\\">12 Dec 2021</div>
    
  <aside class=\\"weather\\">
    <img
    class=\\"weather__icon\\"
    src=\\"\\"
    alt=\\"weather icon\\"
    />
    

    <div class=\\"weather__extra-info\\">
    H NaN% W NaN&#x33A7;
    </div>
    <div class=\\"weather__description\\">mock-description</div>
  </aside>
  </article>
  
  <button class=\\"card__button\\" type=\\"button\\">
    <i class=\\"icon-heart-empty\\"></i>
    <i class=\\"icon-heart\\"></i>
    <span>Save Trip</span>
  </button>
  
</main>"
`;
